more updates for help dialog translations

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -525,14 +525,16 @@
   "app.helpdialog.accessibilityissuewithcourse.text": "The first point of contact when you need assistance with making a course accessibility compliant is your representative from the <em>Accessibility Allies Network</em>. If you don't know who your representative is, please select your business line in the following field:",
   "app.helpdialog.platformissue.link": "Issue with the platform",
   "app.helpdialog.platformissue.text": "To open a ticket with the Tech Solution and Business Analysis Team at LIT, please fill in the <a href='https://forms.office.com/Pages/ResponsePage.aspx?id=RljVnoGKRkKs2LGgGr_A0Un9OJIvHjNFiFE__NvAv8RUN083SEdWSDNUSE9JVU5RMzZRMk5YR1NOUi4u' target='_blank'>Technical Support Form</a>.",
+  "app.helpdialog.platformissue.technicalissueform": "Technical Issue Form",
   "app.helpdialog.complianceissue.text": "To ask recommendations from the Accessibility Team at MED, you can send an email to the <a href='mailto:edsc.dgsrh.accessibilite-accessibility.hrsb.esdc@servicecanada.gc.ca?subject=Accessibility%20Questions'>Accessibility GD Mailbox</a>.",
   "app.heldialog.businessline.norepresentative": "There is currently no representative for your selected business line.",
   "app.heldialog.businessline.representative.helptext": "You can click on your representative's name to send them a message.",
-  "app.back": "Back",
-  "app.hiddenasset": "Hidden Asset",
-  "app.helpdialog.platformissue.technicalissueform": "Technical Issue Form",
   "app.heldialog.technicalissuewithcourse.support.helptext": "You are unable to get answers to your questions? You can <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>open a support ticket</a>.",
   "app.heldialog.accessibilityissuewithcourse.support.helptext": "You are unable to get answers to your questions? You can ask for <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>accessibility recommendations</a>.",
+  "app.back": "Back",
+  "app.representative.atpt": "Authoring Tool Project Team (ATPT) representative",
+  "app.representative.alliesnetwork": "Accessibility Allies Network representative",
+  "app.hiddenasset": "Hidden Asset",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
   "app.assets.hideasset.label": "Hide from asset library",
