--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1543,14 +1543,16 @@
     "app.helpdialog.accessibilityissuewithcourse.text": "Le premier point de contact lorsque vous avez besoin d'aide pour rendre un cours conforme aux normes d'accessibilité est votre représentant du <em>Réseau des alliés de l'accessibilité</em>. Si vous ne savez pas qui est votre représentant, veuillez sélectionner votre secteur d'activité dans le champ suivant&nbsp;:",
     "app.helpdialog.platformissue.link": "Problème avec la plateforme",
     "app.helpdialog.platformissue.text": "Pour ouvrir un billet auprès de l'équipe Tech Solution and Business Analysis de LIT, veuillez remplir <a href='https://forms.office.com/Pages/ResponsePage.aspx?id=RljVnoGKRkKs2LGgGr_A0Un9OJIvHjNFiFE__NvAv8RUN083SEdWSDNUSE9JVU5RMzZRMk5YR1NOUi4u&lang=fr-CA' target='_blank'>le Formulaire d'assistance technique</a>.",
+    "app.helpdialog.platformissue.technicalissueform": "Formulaire d'assistance technique",
     "app.helpdialog.complianceissue.text": "Pour demander des recommandations à l'équipe Accessibilité de DMC, vous pouvez envoyer un courriel à la <a href='mailto:edsc.dgsrh.accessibilite-accessibility.hrsb.esdc@servicecanada.gc.ca?subject=Questions%20concernant%20l%27accessibilité'>Boîte&nbsp;générique&nbsp;Accessibilité</a>.",
     "app.heldialog.businessline.norepresentative": "Il n'y a actuellement aucun représentant pour la ligne de votre entreprise sélectionnée.",
     "app.heldialog.businessline.representative.helptext": "Vous pouvez cliquer sur le nom de votre représentant pour lui envoyer un message.",
-    "app.back": "Retour",
-    "app.hiddenasset": "Média Caché",
-    "app.helpdialog.platformissue.technicalissueform": "Formulaire d'assistance technique",
     "app.heldialog.technicalissuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>ouvrir un billet de support</a>.",
     "app.heldialog.accessibilityissuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez demander des <a class='%{classname}' data-help-dialog-next-view='%{nextview}'>recommandations&nbsp;en&nbsp;matière&nbsp;d'accessibilité</a>.",
+    "app.back": "Retour",
+    "app.representative.atpt": "Représentant(e) du Groupe de travail des outils de création (GTOC)",
+    "app.representative.alliesnetwork": "Représentant(e) du Réseau des alliés de l'accessibilité",
+    "app.hiddenasset": "Média Caché",
     "app.fileself": "Mes médias",
     "app.filehidden": "Médias Cachés",
     "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
