more accessibility fixes for help dialog

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -539,5 +539,6 @@
   "app.typeofissue": "Type of Issue",
   "app.helpdialog.button.label": "Get help",
   "app.selectrepresentativefromatpt": "Select your representative from the Authoring Tool Project Team",
-  "app.selectrepresentativefromaccessibilityalliesnetwork": "Select your representative from the Accessibility Allies Network"
+  "app.selectrepresentativefromaccessibilityalliesnetwork": "Select your representative from the Accessibility Allies Network",
+  "app.helpdialog.closebutton.label": "Close help dialog"
 }
