more accessibility fixes for help dialog

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -537,10 +537,11 @@
   "app.heldialog.technical.toolsanddocumentations.text": "Are you aware that a significant portion of our technical knowledge has been documented? You will find the tools at your disposal in the following list. <ul class='help-dialog-choice-list'><li><a href='https://esdc.sabacloud.com/Saba/Web_wdk/CA1PRD0006/index/prelogin.rdf?spfUrl=%2FSaba%2FWeb_spf%2FCA1PRD0006%2Fcommon%2Fledetail%2F0000117334#/login' target='_blank'>Adapt Authoring Tool - Beginners Course</a></li><li><a href='https://esdc.sabacloud.com/Saba/Web_spf/CA1PRD0006/common/ledetail/cours000000000118367/latestversion' target='_blank'>Adapt Authoring Tool - Intermediate Course</a></li></ul><p style='margin-top:15px;'>Should you encounter inquiries that remain unresolved within these resources, we invite you to connect with the <a href class='%{classname}' data-help-dialog-next-view='%{nextview}'>representative from the Authoring Tool Project Team</a> designated to your business line.</p>",
   "app.heldialog.accessibility.toolsanddocumentations.text": "Are you aware that a significant portion of our accessibility knowledge has been documented? You will find the tools at your disposal in the following list. <ul class='help-dialog-choice-list'><li><a href='https://014gc.sharepoint.com/:w:/r/sites/A11YSpecialistNetwork/Shared%20Documents/College-wide/adapt-best-practices.docx?d=wff22e64646a44f2a8c40338281a441f8&csf=1&web=1&e=A6TRKI' target='_blank'>Adapt Accessibility Best Practices</a></li></ul><p style='margin-top:15px;'>Should you encounter inquiries that remain unresolved within these resources, we invite you to connect with the <a href class='%{classname}' data-help-dialog-next-view='%{nextview}'>representative from the Accessibility Allies Network</a> designated to your business line.</p>",
   "app.typeofissue": "Type of Issue",
+  "app.helpdialog.button.label": "Get help",
   "app.selectrepresentativefromatpt": "Select your representative from the Authoring Tool Project Team",
   "app.selectrepresentativefromaccessibilityalliesnetwork": "Select your representative from the Accessibility Allies Network",
   "app.hiddenasset": "Hidden Asset",
-  "app.helpdialog.button.label": "Get help",
+  "app.helpdialog.closebutton.label": "Close help dialog",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
   "app.assets.hideasset.label": "Hide from asset library",
