--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1555,10 +1555,11 @@
     "app.heldialog.technical.toolsanddocumentations.text": "Savez-vous qu'une grande partie de nos connaissances techniques sont documentées? Vous trouverez les outils à votre disposition dans la liste suivante. <ul class='help-dialog-choice-list'><li><a href='https://esdc.sabacloud.com/Saba/Web_wdk/CA1PRD0006/index/prelogin.rdf?spfUrl=%2FSaba%2FWeb_spf%2FCA1PRD0006%2Fcommon%2Fledetail%2F0000117334#/login' target='_blank'>Cours pour débutants - Outil de création Adapt</a></li><li><a href='https://esdc.sabacloud.com/Saba/Web_spf/CA1PRD0006/common/ledetail/cours000000000118367/latestversion' target='_blank'>Cours intermédiaire - Outil de création Adapt</a></li></ul><p style='margin-top:15px;'>Si vous ne trouvez pas vos réponses dans ces ressources, nous vous invitons à contacter votre <a href class='%{classname}' data-help-dialog-next-view='%{nextview}'>représentant du Groupe de travail des outils de création</a> désigné pour votre secteur d'activité.</p>",
     "app.heldialog.accessibility.toolsanddocumentations.text": "Savez-vous qu'une grande partie de nos connaissances en matière d'accessibilité sont documentées? Vous trouverez les outils à votre disposition dans la liste suivante. <ul class='help-dialog-choice-list'><li><a href='https://014gc.sharepoint.com/:w:/r/sites/A11YSpecialistNetwork/Shared%20Documents/College-wide/adapt-pratiques-exemplaires.docx?d=w71951822b1534a4fb0d04066ad522672&csf=1&web=1&e=VXrm6R' target='_blank'>Pratiques exemplaires Adapt</a></li></ul><p style='margin-top:15px;'>Si vous ne trouvez pas vos réponses dans ces ressources, nous vous invitons à contacter votre <a href class='%{classname}' data-help-dialog-next-view='%{nextview}'>représentant du réseau des alliés de l'accessibilité</a> désigné pour votre secteur d'activité.</p>",
     "app.typeofissue": "Type de problème",
+    "app.helpdialog.button.label": "Trouver de l'aide",
     "app.selectrepresentativefromatpt": "Sélectionnez votre représentant du Groupe de travail des outils de création",
     "app.selectrepresentativefromaccessibilityalliesnetwork": "Sélectionnez votre représentant du Réseau des alliés de l'accessibilité",
     "app.hiddenasset": "Média Caché",
-    "app.helpdialog.button.label": "Trouver de l'aide",
+    "app.helpdialog.closebutton.label": "Fermer la boîte de dialogue d'aide",
     "app.fileself": "Mes médias",
     "app.filehidden": "Médias Cachés",
     "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
