fixed strings and anchor tag href for help dialog

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -516,14 +516,13 @@
   "app.businesslines": "Business Lines",
   "app.representative": "Representative",
   "app.helpdialog.technicalissue.link": "Technical Issue",
-  "app.helpdialog.technicalissue.text": "Before we continue, please select what type of technical issue you are experiencing. If you are having an issue with the authoring tool (error messages, interface not working, translation issues, etc.), please select <em>Issue with the platform</em>. If you are having technical issues with setting up a course, select <em>Issue with building a course</em>.",
+  "app.helpdialog.technicalissue.text": "Before we continue, please select what type of technical issue you are experiencing. If you are having an issue with the authoring tool (error messages, interface not working, translation issues, etc.), please select <em>Issue with the platform</em>. If you are having technical issues with setting up a course, select <em>Technical Issue with building a course</em>.",
   "app.helpdialog.technicalissuewithcourse.link": "Technical issue with building a course",
   "app.helpdialog.technicalissuewithcourse.text": "The first point of contact when you need assistance with building a course is your representative from the <em>Authoring Tool Project Team</em>. If you don't know who your representative is, please select your business line in the following field.",
   "app.helpdialog.accessibilityissue.link": "Accessibility Issue",
-  "app.helpdialog.accessibilityissue.text": "Before we continue, please select what type of accessibility issue you are experiencing. If you are having an issue using the authoring tool with assistive technologies, please select <em>Issue with the platform</em>. If you are having issues with course configuration in order to comply with accessibility, select <em>Issue with building a course</em>.",
+  "app.helpdialog.accessibilityissue.text": "Before we continue, please select what type of accessibility issue you are experiencing. If you are having an issue using the authoring tool with assistive technologies, please select <em>Issue with the platform</em>. If you are having issues with course configuration in order to comply with accessibility, select <em>Accessibility Issue with building a course</em>.",
   "app.helpdialog.accessibilityissuewithcourse.link": "Accessibility issue with building a course",
   "app.helpdialog.accessibilityissuewithcourse.text": "The first point of contact when you need assistance with making a course accessibility compliant is your representative from the <em>Accessibility Allies Network</em>. If you don't know who your representative is, please select your business line in the following field:",
-  "app.helpdialog.platformissue.link": "Issue with the platform",
   "app.helpdialog.platformissue.text": "To open a ticket with the Tech Solution and Business Analysis Team from LIT, please fill in the <a href='https://forms.office.com/Pages/ResponsePage.aspx?id=RljVnoGKRkKs2LGgGr_A0Un9OJIvHjNFiFE__NvAv8RUN083SEdWSDNUSE9JVU5RMzZRMk5YR1NOUi4u' target='_blank'>Technical Support Form</a>.",
   "app.helpdialog.platformissue.technicalissueform": "Technical Issue Form",
   "app.helpdialog.complianceissue.text": "To obtain recommendations from the Accessibility Team at MED, you can send an email to the <a href='mailto:edsc.dgsrh.accessibilite-accessibility.hrsb.esdc@servicecanada.gc.ca?subject=Accessibility%20Questions'>Accessibility GD Mailbox</a>.",
@@ -540,8 +539,10 @@
   "app.helpdialog.button.label": "Get help",
   "app.selectrepresentativefromatpt": "Select your representative from the Authoring Tool Project Team",
   "app.selectrepresentativefromaccessibilityalliesnetwork": "Select your representative from the Accessibility Allies Network",
-  "app.hiddenasset": "Hidden Asset",
   "app.helpdialog.closebutton.label": "Close help dialog",
+  "app.hiddenasset": "Hidden Asset",
+  "app.helpdialog.technical.platformissue.link": "Technical Issue with the platform",
+  "app.helpdialog.accessibility.platformissue.link": "Accessibility Issue with the platform",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
   "app.assets.hideasset.label": "Hide from asset library",
