--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1624,5 +1624,7 @@
     "app.helpdialog.button.label": "Trouver de l'aide",
     "app.selectrepresentativefromatpt": "Sélectionnez votre représentant du Groupe de travail des outils de création",
     "app.selectrepresentativefromaccessibilityalliesnetwork": "Sélectionnez votre représentant du Réseau des alliés de l'accessibilité",
-    "app.helpdialog.closebutton.label": "Fermer la boîte de dialogue d'aide"
+    "app.helpdialog.closebutton.label": "Fermer la boîte de dialogue d'aide",
+    "skip-to-help-dialog": "Passer au dialogue d'aide",
+    "skip-to-main": "Sauter au contenu principal"
 }
