added bypass block for main content and help dialog

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -523,6 +523,8 @@
   "app.helpdialog.accessibilityissue.text": "Before we continue, please select what type of accessibility issue you are experiencing. If you are having an issue using the authoring tool with assistive technologies, please select <em>Issue with the platform</em>. If you are having issues with course configuration in order to comply with accessibility, select <em>Accessibility Issue with building a course</em>.",
   "app.helpdialog.accessibilityissuewithcourse.link": "Accessibility issue with building a course",
   "app.helpdialog.accessibilityissuewithcourse.text": "The first point of contact when you need assistance with making a course accessibility compliant is your representative from the <em>Accessibility Allies Network</em>. If you don't know who your representative is, please select your business line in the following field:",
+  "app.helpdialog.accessibility.platformissue.link": "Accessibility Issue with the platform",
+  "app.helpdialog.technical.platformissue.link": "Technical Issue with the platform",
   "app.helpdialog.platformissue.text": "To open a ticket with the Tech Solution and Business Analysis Team from LIT, please fill in the <a href='https://forms.office.com/Pages/ResponsePage.aspx?id=RljVnoGKRkKs2LGgGr_A0Un9OJIvHjNFiFE__NvAv8RUN083SEdWSDNUSE9JVU5RMzZRMk5YR1NOUi4u' target='_blank'>Technical Support Form</a>.",
   "app.helpdialog.platformissue.technicalissueform": "Technical Issue Form",
   "app.helpdialog.complianceissue.text": "To obtain recommendations from the Accessibility Team at MED, you can send an email to the <a href='mailto:edsc.dgsrh.accessibilite-accessibility.hrsb.esdc@servicecanada.gc.ca?subject=Accessibility%20Questions'>Accessibility GD Mailbox</a>.",
@@ -540,9 +542,9 @@
   "app.selectrepresentativefromatpt": "Select your representative from the Authoring Tool Project Team",
   "app.selectrepresentativefromaccessibilityalliesnetwork": "Select your representative from the Accessibility Allies Network",
   "app.helpdialog.closebutton.label": "Close help dialog",
+  "skip-to-main": "Skip to main content",
+  "skip-to-help-dialog": "Skip to help dialog",
   "app.hiddenasset": "Hidden Asset",
-  "app.helpdialog.technical.platformissue.link": "Technical Issue with the platform",
-  "app.helpdialog.accessibility.platformissue.link": "Accessibility Issue with the platform",
   "app.fileself": "My Assets",
   "app.filehidden": "Hidden Assets",
   "app.assets.hideasset.label": "Hide from asset library",
