--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1541,6 +1541,8 @@
     "app.helpdialog.accessibilityissue.text": "Avant de poursuivre, veuillez sélectionner le type de problème d'accessibilité que vous rencontrez. Si vous avez des difficultés à utiliser l'outil de création avec des technologies d'assistance, sélectionnez <em>Problème avec la plateforme</em>. Si vous rencontrez des problèmes liés à la configuration d’un cours afin qu'il réponde aux exigences d'accessibilité, sélectionnez <em>Problème d'accessibilité lié à la création d'un cours</em>.",
     "app.helpdialog.accessibilityissuewithcourse.link": "Problème d'accessibilité lié à la création d'un cours",
     "app.helpdialog.accessibilityissuewithcourse.text": "Le premier point de contact lorsque vous avez besoin d'aide pour rendre un cours conforme aux normes d'accessibilité est votre représentant du <em>Réseau des alliés de l'accessibilité</em>. Si vous ne savez pas qui est votre représentant, veuillez sélectionner votre secteur d'activité dans le champ suivant&nbsp;:",
+    "app.helpdialog.accessibility.platformissue.link": "Problème d'accessibilité avec la plateforme",
+    "app.helpdialog.technical.platformissue.link": "Problème technique avec la plateforme",
     "app.helpdialog.platformissue.text": "Pour ouvrir un billet auprès de l'équipe de solutions techniques et analyse d'affaires d'EIA, veuillez remplir le <a href='https://forms.office.com/Pages/ResponsePage.aspx?id=RljVnoGKRkKs2LGgGr_A0Un9OJIvHjNFiFE__NvAv8RUN083SEdWSDNUSE9JVU5RMzZRMk5YR1NOUi4u&lang=fr-CA' target='_blank'>Formulaire d'assistance technique</a>.",
     "app.helpdialog.platformissue.technicalissueform": "Formulaire d'assistance technique",
     "app.helpdialog.complianceissue.text": "Pour obtenir des recommandations de l'équipe d'accessibilité de DMC, vous pouvez envoyer un courriel à la <a href='mailto:edsc.dgsrh.accessibilite-accessibility.hrsb.esdc@servicecanada.gc.ca?subject=Questions%20concernant%20l%27accessibilité'>Boîte&nbsp;générique&nbsp;d'accessibilité</a>.",
@@ -1558,9 +1560,9 @@
     "app.selectrepresentativefromatpt": "Sélectionnez votre représentant du Groupe de travail des outils de création",
     "app.selectrepresentativefromaccessibilityalliesnetwork": "Sélectionnez votre représentant du Réseau des alliés de l'accessibilité",
     "app.helpdialog.closebutton.label": "Fermer la boîte de dialogue d'aide",
+    "skip-to-main": "Sauter au contenu principal",
+    "skip-to-help-dialog": "Passer au dialogue d'aide",
     "app.hiddenasset": "Média Caché",
-    "app.helpdialog.technical.platformissue.link": "Problème technique avec la plateforme",
-    "app.helpdialog.accessibility.platformissue.link": "Problème d'accessibilité avec la plateforme",
     "app.fileself": "Mes médias",
     "app.filehidden": "Médias Cachés",
     "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
