--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -189,7 +189,7 @@
   "app.configurationsettings": "Configuration settings",
   "app.themepreviewalt": "Preview image",
   "app.lastupdated": "updated",
-  "app.createdBy": "author",
+  "app.createdBy": "Author",
   "app.recent": "Recent",
   "app.assettitle": "Asset title",
   "app.assetdescription": "Asset description",
@@ -510,5 +510,6 @@
   "app.confirmtransferallcoursestoanotheruser": "Are you sure you want to transfer all your courses to the user identified in the following field?",
   "app.confirmtransfersinglecoursetoanotheruser": "Are you sure you want to transfer your course to the user identified in the following field?",
   "app.transfersuccess": "Successfully transferred!",
-  "app.userrequired": "Please select a user."
+  "app.userrequired": "Please select a user.",
+  "app.hiddenasset": "Hidden Asset"
 }
