fixed ui and added missing translations for hide assets

--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -513,5 +513,7 @@
   "app.userrequired": "Please select a user.",
   "app.hiddenasset": "Hidden Asset",
   "app.fileself": "My Assets",
-  "app.filehidden": "Hidden Assets"
+  "app.filehidden": "Hidden Assets",
+  "app.assets.hideasset.label": "Hide from asset library",
+  "app.assets.hideasset.help": "Use this option if you want the asset to be only visible by yourself in the Asset Library. This can used to hide protected (A) assets from being seen by all users."
 }
