--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -511,6 +511,11 @@
   "app.confirmtransfersinglecoursetoanotheruser": "Are you sure you want to transfer your course to the user identified in the following field?",
   "app.transfersuccess": "Successfully transferred!",
   "app.userrequired": "Please select a user.",
+  "app.hiddenasset": "Hidden Asset",
+  "app.fileself": "My Assets",
+  "app.filehidden": "Hidden Assets",
+  "app.assets.hideasset.label": "Hide from asset library",
+  "app.assets.hideasset.help": "Use this option if you want the asset to be only visible by yourself in the Asset Library. This can used to hide protected (A) assets from being seen by all users.",
   "app.helpdialogmanagement": "Help Dialog Management",
   "app.helpdialog": "Help Dialog",
   "app.businesslines": "Business Lines",
@@ -542,11 +547,7 @@
   "app.selectrepresentativefromatpt": "Select your representative from the Authoring Tool Project Team",
   "app.selectrepresentativefromaccessibilityalliesnetwork": "Select your representative from the Accessibility Allies Network",
   "app.helpdialog.closebutton.label": "Close help dialog",
-  "skip-to-main": "Skip to main content",
   "skip-to-help-dialog": "Skip to help dialog",
-  "app.hiddenasset": "Hidden Asset",
-  "app.fileself": "My Assets",
-  "app.filehidden": "Hidden Assets",
-  "app.assets.hideasset.label": "Hide from asset library",
-  "app.assets.hideasset.help": "Use this option if you want the asset to be only visible by yourself in the Asset Library. This can used to hide protected (A) assets from being seen by all users."
+  "skip-to-main": "Skip to main content",
+  "app.ckhelp": "Need help with the new editor? Consult this <a href=\"https://lit-eia.github.io/en/adapt/ckeditor/\" target=\"_blank\">guided tour</a>."
 }
