--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1529,6 +1529,11 @@
     "app.confirmtransfersinglecoursetoanotheruser": "Êtes-vous certain de vouloir transférer la propriété du cours à l’utilisateur identifié dans le champs suivant?",
     "app.transfersuccess": "Transfert réussi!",
     "app.userrequired": "Veuillez sélectionner un utilisateur.",
+    "app.hiddenasset": "Média Caché",
+    "app.fileself": "Mes médias",
+    "app.filehidden": "Médias Cachés",
+    "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
+    "app.assets.hideasset.help": "Utilisez cette option si vous souhaitez que la ressource ne soit visible que par vous-même dans la bibliothèque de ressources. Cette option peut être utilisée pour cacher les ressources protégées (A) afin qu'elles ne soient pas visibles par tous les utilisateurs.",
     "app.helpdialogmanagement": "Gestion des dialogues d'aide",
     "app.helpdialog": "Dialogues d'aide",
     "app.businesslines": "Secteurs d'activité",
@@ -1560,11 +1565,7 @@
     "app.selectrepresentativefromatpt": "Sélectionnez votre représentant du Groupe de travail des outils de création",
     "app.selectrepresentativefromaccessibilityalliesnetwork": "Sélectionnez votre représentant du Réseau des alliés de l'accessibilité",
     "app.helpdialog.closebutton.label": "Fermer la boîte de dialogue d'aide",
-    "skip-to-main": "Sauter au contenu principal",
     "skip-to-help-dialog": "Passer au dialogue d'aide",
-    "app.hiddenasset": "Média Caché",
-    "app.fileself": "Mes médias",
-    "app.filehidden": "Médias Cachés",
-    "app.assets.hideasset.label": "Cacher de la bibliothèque de ressources",
-    "app.assets.hideasset.help": "Utilisez cette option si vous souhaitez que la ressource ne soit visible que par vous-même dans la bibliothèque de ressources. Cette option peut être utilisée pour cacher les ressources protégées (A) afin qu'elles ne soient pas visibles par tous les utilisateurs."
+    "skip-to-main": "Sauter au contenu principal",
+    "app.ckhelp": "Besoin d'aide avec le nouvel éditeur? Consultez cette <a href=\"https://lit-eia.github.io/fr/adapt/ckeditor/\" target=\"_blank\">visite guidée</a>."
 }
