added translations for narrative width ratio field

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -139,6 +139,8 @@
     "app.scaffold.block.general.displayTitle.help": "Titre qui s’affiche sur la page lorsqu’un bloc est consulté.",
     "app.scaffold.block.general.body.label": "Corps",
     "app.scaffold.block.general.instruction.label": "Texte des instructions",
+    "app.scaffold.block.general.componentWidthRatio.label": "Rapport de largeur des composants",
+    "app.scaffold.block.general.componentWidthRatio.help": "Le rapport de largeur en pourcentage entre les composants de gauche et de droite dans le bloc. Ce paramètre ne s'applique qu'en cas d'utilisation de deux composants.",
     "app.scaffold.block.settings._classes.label": "Classes",
     "app.scaffold.block.settings._classes.help": "Fonction permettant de styliser ou de modifier l’aspect et la convivialité du composant. Ces éléments sont prédéfinis dans le thème ou ajoutés aux paramètres du projet et au code CSS ou LESS personnalisé.",
     "app.scaffold.block.settings._isOptional.label": "Bloc facultatif?",
@@ -1568,14 +1570,14 @@
     "skip-to-help-dialog": "Passer au dialogue d'aide",
     "skip-to-main": "Sauter au contenu principal",
     "app.ckhelp": "Besoin d'aide avec le nouvel éditeur? Consultez cette <a href=\"https://lit-eia.github.io/fr/adapt/ckeditor/\" target=\"_blank\">visite guidée</a>.",
-    "app.scaffold.block.general.componentWidthRatio.label": "Rapport de largeur des composants",
-    "app.scaffold.block.general.componentWidthRatio.help": "Le rapport de largeur en pourcentage entre les composants de gauche et de droite dans le bloc. Ce paramètre ne s'applique qu'en cas d'utilisation de deux composants.",
-    "app.forms.validators.url": "URL invalide",
     "app.forms.validators.required": "Requis",
-    "app.forms.validators.range": "Doit être un nombre entre <%= min %> et <%= max %>",
-    "app.forms.validators.number": "Doit être un nombre",
-    "app.forms.validators.minimumItems2": "Vous avez besoin d'au moins deux éléments",
-    "app.forms.validators.match": "Doit correspondre au champ \"<%= field %>\"",
     "app.forms.validators.invalid": "Invalide",
-    "app.forms.validators.email": "Adresse e-mail invalide"
+    "app.forms.validators.number": "Doit être un nombre",
+    "app.forms.validators.range": "Doit être un nombre entre <%= min %> et <%= max %>",
+    "app.forms.validators.email": "Adresse e-mail invalide",
+    "app.forms.validators.url": "URL invalide",
+    "app.forms.validators.match": "Doit correspondre au champ \"<%= field %>\"",
+    "app.forms.validators.minimumItems2": "Vous avez besoin d'au moins deux éléments",
+    "app.scaffold.component.properties.narrativeWidthRatio.label": "Rapport de largeur de la narration",
+    "app.scaffold.component.properties.narrativeWidthRatio.help": "Le rapport de largeur en pourcentage entre le texte narratif et l'image de la narration."
 }
