fixed error message for file size limit

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -10,6 +10,8 @@
     "app.scaffold.component.properties._items.accordion.label": "Éléments",
     "app.scaffold.component.properties._shouldCollapseItems.label": "Les éléments devraient se réduire automatiquement",
     "app.scaffold.component.properties._shouldCollapseItems.help": "Si cette fonction est désactivée, les éléments agrandis d’un accordéon ne se réduiront pas lorsqu’un nouvel élément est agrandi.",
+    "app.scaffold.component.properties.narrativeWidthRatio.label": "Rapport de largeur de la narration",
+    "app.scaffold.component.properties.narrativeWidthRatio.help": "Le rapport de largeur en pourcentage entre le texte narratif et l'image de la narration.",
     "app.scaffold.component.settings._classes.label": "Classes",
     "app.scaffold.component.settings._classes.help": "Fonction permettant de styliser ou de modifier l’aspect et la convivialité du composant. Ces éléments sont prédéfinis dans le thème ou ajoutés aux paramètres du projet et au code CSS ou LESS personnalisé.",
     "app.scaffold.component.settings._isOptional.label": "Composant facultatif?",
@@ -1382,7 +1384,7 @@
     "app.stopsharingwithyourself": "Vous ne pouvez pas retirer votre nom de cette liste.<br/><br/>Si vous souhaitez que ce cours ne soit plus partagé avec vous, veuillez utiliser un autre compte utilisateur.",
     "app.searchByMail": "Effectuer une recherche par adresse courriel.",
     "app.maxfileuploadsize": "Taille maximale du fichier à téléverser : %{size}.",
-    "app.uploadsizeerror": "La taille limite du fichier est dépassée. Taille maximum : %{max}; taille du fichier reçu : %{size}.",
+    "app.uploadsizeerror": "La taille limite du fichier est dépassée.",
     "app.fileuploaderror": "Le téléversement du fichier a échoué.",
     "app.cannotfindbower": "Impossible de trouver le fichier bower.json attendu dans la racine du module d’extension; veuillez vérifier la structure du fichier zip, puis réessayez.",
     "app.unrecognisedplugin": "Module d’extension non reconnu – un module d’extension doit comporter un fichier bower.json.",
@@ -1577,7 +1579,5 @@
     "app.forms.validators.email": "Adresse e-mail invalide",
     "app.forms.validators.url": "URL invalide",
     "app.forms.validators.match": "Doit correspondre au champ \"<%= field %>\"",
-    "app.forms.validators.minimumItems2": "Vous avez besoin d'au moins deux éléments",
-    "app.scaffold.component.properties.narrativeWidthRatio.label": "Rapport de largeur de la narration",
-    "app.scaffold.component.properties.narrativeWidthRatio.help": "Le rapport de largeur en pourcentage entre le texte narratif et l'image de la narration."
+    "app.forms.validators.minimumItems2": "Vous avez besoin d'au moins deux éléments"
 }
