--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -549,5 +549,6 @@
   "app.helpdialog.closebutton.label": "Close help dialog",
   "skip-to-help-dialog": "Skip to help dialog",
   "skip-to-main": "Skip to main content",
-  "app.ckhelp": "Need help with the new editor? Consult this <a href=\"https://lit-eia.github.io/en/adapt/ckeditor/\" target=\"_blank\">guided tour</a>."
+  "app.ckhelp": "Need help with the new editor? Consult this <a href=\"https://lit-eia.github.io/en/adapt/ckeditor/\" target=\"_blank\">guided tour</a>.",
+  "app.accountmanager": "Account manager for: "
 }
