--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1645,5 +1645,6 @@
     "app.forms.validators.url": "URL invalide",
     "app.forms.validators.match": "Doit correspondre au champ \"<%= field %>\"",
     "app.forms.validators.minimumItems2": "Vous avez besoin d'au moins deux éléments",
-    "app.forms.validators.urlSaba": "L'URL doit être un profil Saba"
+    "app.forms.validators.urlSaba": "L'URL doit être un profil Saba",
+    "app.accountmanager": "Gestionnaire de compte pour:"
 }
