--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1646,5 +1646,6 @@
     "app.forms.validators.match": "Doit correspondre au champ \"<%= field %>\"",
     "app.forms.validators.minimumItems2": "Vous avez besoin d'au moins deux éléments",
     "app.forms.validators.urlSaba": "L'URL doit être un profil Saba",
-    "app.accountmanager": "Gestionnaire de compte pour:"
+    "app.accountmanager": "Gestionnaire de compte pour:",
+    "app.optionsmenu": "Menu d'options"
 }
