--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -551,5 +551,7 @@
   "skip-to-main": "Skip to main content",
   "app.ckhelp": "Need help with the new editor? Consult this <a href=\"https://lit-eia.github.io/en/adapt/ckeditor/\" target=\"_blank\">guided tour</a>.",
   "app.accountmanager": "Account manager for: ",
-  "app.optionsmenu": "Options Menu"
+  "app.optionsmenu": "Options Menu",
+  "app.editpagestructure": "Edit page structure",
+  "app.editpagesettings": "Edit page settings"
 }
