--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1582,5 +1582,7 @@
     "app.forms.validators.minimumItems2": "Vous avez besoin d'au moins deux éléments",
     "app.forms.validators.urlSaba": "L'URL doit être un profil Saba",
     "app.accountmanager": "Gestionnaire de compte pour:",
-    "app.optionsmenu": "Menu d'options"
+    "app.optionsmenu": "Menu d'options",
+    "app.editpagestructure": "Modifier la structure de la page",
+    "app.editpagesettings": "Modifier les paramètres des pages"
 }
