added french translations for guided tour labels

--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -431,6 +431,8 @@
     "app.scaffold.component._pin.src.help": "Il s’agit de l’image épinglée; laisser vide par défaut.",
     "app.scaffold.component._pin.alt.label": "Alt",
     "app.scaffold.component._pin.alt.help": "Texte de remplacement pour l’image",
+    "app.scaffold.component._pin._bordercolor.label": "Couleur de la bordure",
+    "app.scaffold.component._pin._bordercolor.help": "Couleur de la bordure",
     "app.scaffold.component.hotgraphic._classes.label": "Classes des fenêtres contextuelles de l’élément",
     "app.scaffold.component.hotgraphic._classes.help": "Permet d’appliquer des classes CSS personnalisées à l’élément de la fenêtre contextuelle.",
     "app.scaffold.component.hotgraphic._left.label": "Position de l’épingle – Gauche",
@@ -1405,6 +1407,8 @@
     "app.article": "article |||| articles",
     "app.block": "bloc |||| blocs",
     "app.component": "composant |||| composants",
+    "app.adapt-esdc-tour.displayName": "Visite guidée",
+    "app.adapt-esdc-tour.description": "Un composant qui permet une visite guidée sur des images",
     "app.scaffold.course._extensions._Adapt-accessibilityfixes.legend": "Corrections d'accessibilité",
     "app.scaffold.config._extensions._pageIncompletePrompt.legend": "Message-guide Page incomplète",
     "app.scaffold.course._extensions._pageIncompletePrompt.legend": "Message-guide Page incomplète",
@@ -1414,6 +1418,36 @@
     "app.scaffold.page._extensions._search.legend": "Recherche",
     "app.scaffold.article._extensions._search.legend": "Recherche",
     "app.scaffold.block._extensions._search.legend": "Recherche",
+    "app.scaffold.course._components._guidedtour.label": "Visite guidée",
+    "app.scaffold.course._guidedtour.ariaRegion.label": "Région Aria",
+    "app.scaffold.course._guidedtour.nextText.label": "Texte suivant",
+    "app.scaffold.course._guidedtour.previousText.label": "Texte précédent",
+    "app.scaffold.course._guidedtour.closeText.label": "Texte de fermeture",
+    "app.scaffold.course._guidedtour.startTourText.label": "Texte de démarrage de la visite guidée",
+    "app.scaffold.component.properties._ariaLevel.label": "Niveau de titre",
+    "app.scaffold.component.properties._ariaLevel.help": "Niveau Aria pour le titre",
+    "app.scaffold.component.properties._items.guidedtour.label": "Étapes de la visite guidée",
+    "app.scaffold.component.guidedtour.title.label": "Titre",
+    "app.scaffold.component.guidedtour.title.help": "Titre affiché dans la fenêtre contextuelle",
+    "app.scaffold.component.guidedtour._ariaLevel.label": "Niveau de titre",
+    "app.scaffold.component.guidedtour._ariaLevel.help": "Niveau Aria pour le titre",
+    "app.scaffold.component.guidedtour.body.label": "Corps",
+    "app.scaffold.component.guidedtour.body.help": "Texte du corps affiché dans la fenêtre contextuelle",
+    "app.scaffold.component.guidedtour.body.a11y": "Recommandation d'accessibilité : Assurez-vous que chaque étape soit compréhensible indépendamment. Le texte doit pouvoir se suffire à lui-même, sans dépendre des images ou des indications de pointeur. Assurez-vous que les bulles d'instruction n'obscurciss",
+    "app.scaffold.component.guidedtour._graphic.label": "Graphique d'étape",
+    "app.scaffold.component.guidedtour._pin.label": "Position de l'étape",
+    "app.scaffold.component.guidedtour._pin.secondaryLabel": "Astuce : Vous pouvez rapidement trouver la position de l'épingle avec l'outil de recherche de position de l'épingle",
+    "app.scaffold.component._pin._left.label": "Position de l'épingle - Gauche",
+    "app.scaffold.component._pin._left.help": "Position gauche de l'épingle",
+    "app.scaffold.component._pin._top.label": "Position de l'épingle - Haut",
+    "app.scaffold.component._pin._top.help": "Position supérieure de l'épingle",
+    "app.scaffold.component._pin._bubbledirection.label": "Direction de la bulle",
+    "app.scaffold.component._pin._bubbledirection.help": "Direction de la bulle",
+    "app.scaffold._bubbledirection.none.variable": "aucune",
+    "app.scaffold._bubbledirection.left.variable": "gauche",
+    "app.scaffold._bubbledirection.right.variable": "droite",
+    "app.scaffold._bubbledirection.top.variable": "haut",
+    "app.scaffold._bubbledirection.bottom.variable": "bas",
     "app.scaffold.component._extensions._search.legend": "Recherche",
     "app.scaffold.config._extensions._homeButton.legend": "Bouton Accueil",
     "app.scaffold.course._extensions._homeButton.legend": "Bouton Accueil",
@@ -1436,6 +1470,12 @@
     "app.scaffold._items.filename.label": "Nom du fichier",
     "app.scaffold._items.description.label": "Description",
     "app.scaffold._items.link.label": "Lien",
+    "app.scaffold._items.stepGraphic.label": "Graphique d'étape",
+    "app.scaffold._items.stepPosition.label": "Position de l'étape",
+    "app.scaffold._items._pin.left.label": "Position de l'épingle - Gauche",
+    "app.scaffold._items._pin.top.label": "Position de l'épingle - Haut",
+    "app.scaffold._items._pin.bubbledirection.label": "Direction de la bulle",
+    "app.scaffold._items._pin.bordercolor.label": "Couleur de la bordure",
     "app.scaffold.course._resourcesItems._type.label": "Type",
     "app.scaffold.course._resourcesItems._forceDownload.label": "Forcer le téléchargement",
     "app.scaffold.course._resourcesItems.title.label": "Titre",
