--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1360,6 +1360,8 @@
     "app.editormenu": "Structure du cours",
     "app.backtomenu": "Retour à la structure du cours",
     "app.backtopage": "Retour à la structure de la page",
+    "app.editpagestructure": "Modifier la structure de la page",
+    "app.editpagesettings": "Modifier les paramètres des pages",
     "app.editorpage": "Structure de la page",
     "app.editorpagesettings": "Paramètres des pages",
     "app.editorarticle": "Paramètres des articles",
@@ -1583,6 +1585,44 @@
     "app.forms.validators.urlSaba": "L'URL doit être un profil Saba",
     "app.accountmanager": "Gestionnaire de compte pour:",
     "app.optionsmenu": "Menu d'options",
-    "app.editpagestructure": "Modifier la structure de la page",
-    "app.editpagesettings": "Modifier les paramètres des pages"
+    "app.scaffold.course._guidedtour.startTourText.label": "Texte de démarrage de la visite guidée",
+    "app.scaffold.course._guidedtour.previousText.label": "Texte précédent",
+    "app.scaffold.course._guidedtour.nextText.label": "Texte suivant",
+    "app.scaffold.course._guidedtour.closeText.label": "Texte de fermeture",
+    "app.scaffold.course._guidedtour.ariaRegion.label": "Région Aria",
+    "app.scaffold.course._components._guidedtour.label": "Visite guidée",
+    "app.scaffold.component.properties._items.guidedtour.label": "Étapes de la visite guidée",
+    "app.scaffold.component.properties._ariaLevel.label": "Niveau de titre",
+    "app.scaffold.component.properties._ariaLevel.help": "Niveau Aria pour le titre",
+    "app.scaffold.component.guidedtour.title.label": "Titre",
+    "app.scaffold.component.guidedtour.title.help": "Titre affiché dans la fenêtre contextuelle",
+    "app.scaffold.component.guidedtour.body.label": "Corps",
+    "app.scaffold.component.guidedtour.body.help": "Texte du corps affiché dans la fenêtre contextuelle",
+    "app.scaffold.component.guidedtour.body.a11y": "Recommandation d'accessibilité : Assurez-vous que chaque étape soit compréhensible indépendamment. Le texte doit pouvoir se suffire à lui-même, sans dépendre des images ou des indications de pointeur. Assurez-vous que les bulles d'instruction n'obscurciss",
+    "app.scaffold.component.guidedtour._pin.secondaryLabel": "Astuce : Vous pouvez rapidement trouver la position de l'épingle avec l'outil de recherche de position de l'épingle",
+    "app.scaffold.component.guidedtour._pin.label": "Position de l'étape",
+    "app.scaffold.component.guidedtour._graphic.label": "Graphique d'étape",
+    "app.scaffold.component.guidedtour._ariaLevel.label": "Niveau de titre",
+    "app.scaffold.component.guidedtour._ariaLevel.help": "Niveau Aria pour le titre",
+    "app.scaffold.component._pin._top.label": "Position de l'épingle - Haut",
+    "app.scaffold.component._pin._top.help": "Position supérieure de l'épingle",
+    "app.scaffold.component._pin._left.label": "Position de l'épingle - Gauche",
+    "app.scaffold.component._pin._left.help": "Position gauche de l'épingle",
+    "app.scaffold.component._pin._bubbledirection.label": "Direction de la bulle",
+    "app.scaffold.component._pin._bubbledirection.help": "Direction de la bulle",
+    "app.scaffold.component._pin._bordercolor.label": "Couleur de la bordure",
+    "app.scaffold.component._pin._bordercolor.help": "Couleur de la bordure",
+    "app.scaffold._items.stepPosition.label": "Position de l'étape",
+    "app.scaffold._items.stepGraphic.label": "Graphique d'étape",
+    "app.scaffold._items._pin.top.label": "Position de l'épingle - Haut",
+    "app.scaffold._items._pin.left.label": "Position de l'épingle - Gauche",
+    "app.scaffold._items._pin.bubbledirection.label": "Direction de la bulle",
+    "app.scaffold._items._pin.bordercolor.label": "Couleur de la bordure",
+    "app.scaffold._bubbledirection.top.variable": "haut",
+    "app.scaffold._bubbledirection.right.variable": "droite",
+    "app.scaffold._bubbledirection.none.variable": "aucune",
+    "app.scaffold._bubbledirection.left.variable": "gauche",
+    "app.scaffold._bubbledirection.bottom.variable": "bas",
+    "app.adapt-esdc-tour.displayName": "Visite guidée",
+    "app.adapt-esdc-tour.description": "Un composant qui permet une visite guidée sur des images"
 }
