--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -553,5 +553,9 @@
   "skip-to-main": "Skip to main content",
   "app.ckhelp": "Need help with the new editor? Consult this <a href=\"https://lit-eia.github.io/en/adapt/ckeditor/\" target=\"_blank\">guided tour</a>.",
   "app.accountmanager": "Account manager for: ",
-  "app.optionsmenu": "Options Menu"
+  "app.optionsmenu": "Options Menu",
+  "app.scaffold._items._pin.left.label": "Step Position - Left",
+  "app.scaffold._items._pin.top.label": "Step Position - Top",
+  "app.scaffold._items._pin.bubbledirection.label": "Bubble Direction",
+  "app.scaffold._items._pin.bordercolor.label": "Border Color"
 }
