--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1697,5 +1697,6 @@
     "app.pagemenu": "Menu de la page",
     "app.articlemenu": "Menu de l'article",
     "app.blockmenu": "Menu du bloc",
-    "app.componentmenu": "Menu du composant"
+    "app.componentmenu": "Menu du composant",
+    "app.pinfinder.mobilefallbackmessage": "Il n'est pas possible d'utiliser le dispositif de repérage de d'épingle en raison de la faible largeur de l'appareil."
 }
